# datawork

./: .gitignore  README.md  index.html  package.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Greet.vue
